--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -99,5 +99,6 @@ h2 {
 }
 
 .container {
-  min-height: auto;
+  min-height: 89vh;
+
 }
